# SVG2DragCut

./: CMakeLists.txt  README.md
include/: Line.h  SVGPathParser.h  SVGPathToken.h
src/: Line.cpp  SVG2DragCut.cpp  SVGPathParser.cpp  SVGPathToken.cpp
